--- a/5/2025_05_29_space/html/space.html
+++ b/5/2025_05_29_space/html/space.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>space</title>
     <link rel="stylesheet" href="../css/space.css" />
-    <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"
-    />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" />
     <link rel="stylesheet" href="../XEIcon-2.2.0/XEIcon-2.2.0/xeicon.min.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
@@ -114,21 +112,17 @@
           </div>
           <div class="text_sec2">
             <h2>Various<br />functions</h2>
-            <p>
-              You can create a great website using recently<br />added features.
-            </p>
+            <p>You can create a great website using recently<br />added features.</p>
           </div>
+          <div class="heart">❤️</div>
         </section>
         <!-- sec3 -->
         <div class="sec3">
           <h2>learn moudles</h2>
-          <h3>
-            If you want to test and learn a simple module, you can visit the
-            page via the menu below.
-          </h3>
+          <h3>If you want to test and learn a simple module, you can visit the page via the menu below.</h3>
           <div class="modules">
             <a href="#">
-              <div class="module1">
+              <div class="module1" id="module_hover">
                 <div class="module_img">
                   <i class="xi-code xi-5x"></i>
                 </div>
@@ -139,7 +133,7 @@
               </div>
             </a>
             <a href="#">
-              <div class="module2">
+              <div class="module2" id="module_hover">
                 <div class="module_img">
                   <i class="xi-text-type xi-5x"></i>
                 </div>
@@ -150,7 +144,7 @@
               </div>
             </a>
             <a href="#">
-              <div class="module3">
+              <div class="module3" id="module_hover">
                 <div class="module_img">
                   <i class="xi-at xi-5x"></i>
                 </div>
@@ -163,11 +157,170 @@
           </div>
         </div>
         <!-- sec4 -->
-        <div class="sec4">
-          <div class="con"></div>
-        </div>
+        <section class="sec4">
+          <div class="con">
+            <div class="con_box">
+              <div class="left_con">
+                <div class="text_box" id="text_con_before">
+                  <h2>Data lab</h2>
+                  <h3>You can download the necessary materialis<br />form the data library.</h3>
+                  <a href="#">
+                    more view
+                    <i class="xi-plus xi-x" id="spin"></i>
+                  </a>
+                </div>
+              </div>
+              <div class="right_con">
+                <a href="#">
+                  <div class="rightcon_box">
+                    <div class="rightcon_img">
+                      <img src="../image/Saly-12.svg" alt="" />
+                    </div>
+                    <div class="rightcon_txt">
+                      <h4>heading&nbsp;text</h4>
+                      <h3>statistics</h3>
+                      <p>
+                        This&nbsp;feature&nbsp;allows&nbsp;you&nbsp;to&nbsp;easily&nbsp;calculate&nbsp;statistics&nbsp;on&nbsp;your&nbsp;data.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="rightcon_box">
+                    <div class="rightcon_img">
+                      <img src="../image/Saly-31.svg" alt="" />
+                    </div>
+                    <div class="rightcon_txt">
+                      <h4>heading&nbsp;text</h4>
+                      <h3>statistics</h3>
+                      <p>
+                        This&nbsp;feature&nbsp;allows&nbsp;you&nbsp;to&nbsp;easily&nbsp;calculate&nbsp;statistics&nbsp;on&nbsp;your&nbsp;data.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="rightcon_box">
+                    <div class="rightcon_img">
+                      <img src="../image/Saly-27.svg" alt="" />
+                    </div>
+                    <div class="rightcon_txt">
+                      <h4>heading&nbsp;text</h4>
+                      <h3>statistics</h3>
+                      <p>
+                        This&nbsp;feature&nbsp;allows&nbsp;you&nbsp;to&nbsp;easily&nbsp;calculate&nbsp;statistics&nbsp;on&nbsp;your&nbsp;data.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="rightcon_box">
+                    <div class="rightcon_img">
+                      <img src="../image/Saly-38.svg" alt="" />
+                    </div>
+                    <div class="rightcon_txt">
+                      <h4>heading&nbsp;text</h4>
+                      <h3>statistics</h3>
+                      <p>
+                        This&nbsp;feature&nbsp;allows&nbsp;you&nbsp;to&nbsp;easily&nbsp;calculate&nbsp;statistics&nbsp;on&nbsp;your&nbsp;data.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- sec5 -->
+        <section class="sec5">
+          <h2>Voyager's Journey</h2>
+          <div class="card_wrap">
+            <div class="card">
+              <div class="img">
+                <img src="../image/sec5-1.svg" alt="" />
+              </div>
+              <div class="card_wrap_text">
+                <h3>cooperation</h3>
+                <p>If you want to collaborate with us, come here.</p>
+                <a href="#">
+                  more view
+                  <i class="xi-plus xi-x" id="spin"></i>
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="img">
+                <img src="../image/sec5-2.svg" alt="" />
+              </div>
+              <div class="card_wrap_text">
+                <h3>Find a Teammate</h3>
+                <p>Are you looking for a companion to join you on your journey?</p>
+                <a href="#">
+                  more view
+                  <i class="xi-plus xi-x" id="spin"></i>
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="img">
+                <img src="../image/sec5-3.svg" alt="" />
+              </div>
+              <div class="card_wrap_text">
+                <h3>Official Document</h3>
+                <p>Find various features and options in the official documentation.</p>
+                <a href="#">
+                  more view
+                  <i class="xi-plus xi-x" id="spin"></i>
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="img">
+                <img src="../image/sec5-4.svg" alt="" />
+              </div>
+              <div class="card_wrap_text">
+                <h3>Directions</h3>
+                <p>The first step in the journey. How to come to our company.</p>
+                <a href="#">
+                  more view
+                  <i class="xi-plus xi-x" id="spin"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="rolling">
+            <div class="rolling_text">
+              <p id="blank">Explorer</p>
+              <p>Explorer</p>
+              <p id="blank">Explorer</p>
+            </div>
+          </div>
+        </section>
       </main>
-      <footer></footer>
+      <footer>
+        <div class="footer_con">
+          <h1>
+            <a href="#">
+              <img src="../image/logo.svg" alt="" />
+            </a>
+          </h1>
+        </div>
+        <h2>© 2024 Explorer Corp. All rights reserved.</h2>
+        <div class="footer_icon">
+          <a href="#">
+            <i class="xi-stack-overflow"></i>
+          </a>
+          <a href="#">
+            <i class="xi-youtube-play"></i>
+          </a>
+          <a href="#">
+            <i class="xi-github"></i>
+          </a>
+          <a href="#">
+            <i class="xi-instagram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
