--- a/5/2025_05_29_space/html/space.html
+++ b/5/2025_05_29_space/html/space.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>space</title>
     <link rel="stylesheet" href="../css/space.css" />
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"
+    />
     <link rel="stylesheet" href="../XEIcon-2.2.0/XEIcon-2.2.0/xeicon.min.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
     <style>
@@ -112,14 +115,19 @@
           </div>
           <div class="text_sec2">
             <h2>Various<br />functions</h2>
-            <p>You can create a great website using recently<br />added features.</p>
+            <p>
+              You can create a great website using recently<br />added features.
+            </p>
           </div>
           <div class="heart">❤️</div>
         </section>
         <!-- sec3 -->
         <div class="sec3">
           <h2>learn moudles</h2>
-          <h3>If you want to test and learn a simple module, you can visit the page via the menu below.</h3>
+          <h3>
+            If you want to test and learn a simple module, you can visit the
+            page via the menu below.
+          </h3>
           <div class="modules">
             <a href="#">
               <div class="module1" id="module_hover">
@@ -163,7 +171,10 @@
               <div class="left_con">
                 <div class="text_box" id="text_con_before">
                   <h2>Data lab</h2>
-                  <h3>You can download the necessary materialis<br />form the data library.</h3>
+                  <h3>
+                    You can download the necessary materialis<br />form the data
+                    library.
+                  </h3>
                   <a href="#">
                     more view
                     <i class="xi-plus xi-x" id="spin"></i>
@@ -254,7 +265,9 @@
               </div>
               <div class="card_wrap_text">
                 <h3>Find a Teammate</h3>
-                <p>Are you looking for a companion to join you on your journey?</p>
+                <p>
+                  Are you looking for a companion to join you on your journey?
+                </p>
                 <a href="#">
                   more view
                   <i class="xi-plus xi-x" id="spin"></i>
@@ -267,7 +280,10 @@
               </div>
               <div class="card_wrap_text">
                 <h3>Official Document</h3>
-                <p>Find various features and options in the official documentation.</p>
+                <p>
+                  Find various features and options in the official
+                  documentation.
+                </p>
                 <a href="#">
                   more view
                   <i class="xi-plus xi-x" id="spin"></i>
@@ -280,7 +296,9 @@
               </div>
               <div class="card_wrap_text">
                 <h3>Directions</h3>
-                <p>The first step in the journey. How to come to our company.</p>
+                <p>
+                  The first step in the journey. How to come to our company.
+                </p>
                 <a href="#">
                   more view
                   <i class="xi-plus xi-x" id="spin"></i>
